jsonschemadsl2ecore.trafo.opt/test/test66/validtests/example1.test66
{
	"prop1":{},
	"prop3":{}
} 