jsonschemadsl2ecore.trafo.opt/test/test66/invalidtests/example9.test66
{
	"prop1":{},
	"prop3":{"key1":"key1" }
}   